[wayland] popupnotification disappear when choosing microphone/video/screensharing source
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
People
(Reporter: jhorak, Assigned: jhorak)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
When using wayland backend:
- go to https://mozilla.github.io/webrtc-landing/gum_test.html
- Choose 'Audio&Video'
- dropdown the Camera to share: or Microphone to share:
Result: popupnotification window disappear and only the menu with selection opens. This breaks the dialog as long user is unable to click on Allow/Don't Allow.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
Under Wayland where there's a strict popup window hierarchy, using toplevel window
for the submenus in popupnotification cause the popupnotification to hide
when opening them and this breaks user to Allow/Don't allow the action.
We have to use last opened popup window as a parent for these submenus.
Updated•2 years ago
|
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8c62f6e70a74
Don't use toplevel window as parent for the menus in popupnotification; r=stransky
Comment 3•2 years ago
|
||
bugherder |
Comment 4•2 years ago
|
||
Comment on attachment 9091725 [details]
Bug 1580174 - Don't use toplevel window as parent for the menus in popupnotification; r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: Some popups (screen sharing for instance) does not work under wayland.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Linux/Wayland only.
- String changes made/needed: none
Comment 5•2 years ago
|
||
Comment on attachment 9091725 [details]
Bug 1580174 - Don't use toplevel window as parent for the menus in popupnotification; r=stransky
Wayland fix, approved for 70.0b8.
Comment 6•2 years ago
|
||
bugherderuplift |
Description
•