Bug 1580174 -  Don't use toplevel window as parent for the menus in popupnotification; r=stransky a=RyanVM

Under Wayland where there's a strict popup window hierarchy, using toplevel window
for the submenus in popupnotification cause the popupnotification to hide
when opening them and this breaks user to Allow/Don't allow the action.

We have to use last opened popup window as a parent for these submenus.

Differential Revision: https://phabricator.services.mozilla.com/D45343